# PLD-Comp

./: .gitignore  README.md
.github/workflows/: ci.yml
compiler/: .gitignore  CMakeLists.txt  CodeGenVisitor.cpp  CodeGenVisitor.h  Makefile  Symbol.h  Type.cpp  Type.h  VisitorErrorListener.cpp  VisitorErrorListener.h  ifcc.g4  ir.cpp  ir.h  main.cpp
tests/: ifcc-test.py  tests.py
tests/testfiles/known_bugs/unary_opetations/: prefix_dec.c  prefix_inc.c
tests/testfiles/not_implemented_yet/: arithmetic.c  array_decl.c  assign_in_decl.c  inline_comments.c  multiple_var_decl.c
tests/testfiles/not_implemented_yet/functions/: declare_function.c  getchar_in_expr.c  putchar_in_expr.c  use_declared_function.c  use_undeclared_function.c
tests/testfiles/not_implemented_yet/unary_opetations/: assign_postfix_dec.c  assign_postfix_inc.c  postfix_dec.c  postfix_inc.c  return_postfix_dec.c  return_postfix_inc.c
tests/testfiles/passing/: 10_void_function.c  3_variable_not_declared.c  4_assign_variable_to_constant.c  5_assign_variable_to_variable.c  6_use_uninitialized_variable.c  7_valid_identifiers.c  9_return_expression.c  inline_comments.c
tests/testfiles/passing/arithmetic_expressions/: add_and_sub.c  add_variables.c  addition.c  div_variables.c  division.c  mod.c  mult_and_div.c  mult_variables.c  multiplication.c  operator_precedence.c  parenthesis.c  sub_variables.c  subtraction.c
tests/testfiles/passing/characters/: char_and_int.c  char_decl.c  char_op.c
tests/testfiles/passing/conditionals/: 01_gt_g_if.c  02_gt_e_if.c  04_lt_g_if.c  05_lt_e_if.c  06_lt_l_if.c  (+28 more)
(+86 files in other folders)
